# dependency-collector

./: README.md  pyproject.toml
src/dependency_collector/: __init__.py  cli.py
